Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="photo-placeholder">
                 <img src="imagenes/foto3.jpg">
             </div>
-            <p class="photo-caption">Mi lugar  🌷</p>
+            <p class="photo-caption">Mi lugar inolvidable 🌷</p>
         </div>
     </div>
 
@@ -70,3 +70,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
