Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
         <div class="photo-frame">
             <div class="photo-placeholder">
-                <img src="imagenes/foto2.jpg">
+                <img src="imagenes/foto2.jpg" class="foto2">
+
             </div>
             <p class="photo-caption">Cada momento contigo es eterno 💖</p>
         </div>
@@ -70,4 +71,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-
